# freenect-stuff

c/coxlab_examples/: cmake_install.cmake  glview
coxlab_examples/: CMakeLists.txt  glview.c
scripts/: dat2obj.py  datviewer.py
scripts/work/: dat2obj.py  dat2obj_2.py  datviewer.py
software/: CMakeLists.txt
software/c/coxlab_examples/: Makefile
software/coxlab_examples/: glview.c  live_capture.c
